<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"/>


        <ToggleButton
            android:id="@+id/togglebutton_map_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/normal"
            android:textOff="@string/satelite"
            android:onClick="mapType"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveLatLng"
            android:text="@string/saveLatLng"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/togglebutton_map_type"
            android:layout_alignEnd="@+id/togglebutton_map_type" />

</RelativeLayout>