<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="23dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="5dp"
            android:text="Latitude: "
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark">
        </TextView>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="unknown"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="5dp"
            android:text="Longitute: "
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark" >
        </TextView>

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="unknown"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/main_button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/button"
            android:padding="5dp"
            android:layout_marginRight="2dp"
            android:textStyle="bold"
            android:background="@android:color/holo_blue_bright"/>

        <Button
            android:id="@+id/main_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/button_mapa"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_marginLeft="2dp"
            android:onClick="showMap"
            android:background="@android:color/holo_orange_light"
            />
    </LinearLayout>
    <ListView

        android:id="@+id/main_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

</LinearLayout>